0.7.1/_sources/api/napari.components.ViewerModel.rst
napari.components.ViewerModel
=============================

.. currentmodule:: napari.components

.. autoclass:: ViewerModel
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~ViewerModel.add_image
   
   
      ~ViewerModel.add_labels
   
   
      ~ViewerModel.add_layer
   
   
      ~ViewerModel.add_points
   
   
      ~ViewerModel.add_shapes
   
   
      ~ViewerModel.add_surface
   
   
      ~ViewerModel.add_tracks
   
   
      ~ViewerModel.add_vectors
   
   
      ~ViewerModel.bind_key
   
   
      ~ViewerModel.construct
   
   
      ~ViewerModel.copy
   
   
      ~ViewerModel.dict
   
   
      ~ViewerModel.enums_as_values
   
   
      ~ViewerModel.fit_to_view
   
   
      ~ViewerModel.from_orm
   
   
      ~ViewerModel.json
   
   
      ~ViewerModel.model_construct
   
   
      ~ViewerModel.model_copy
   
   
      ~ViewerModel.model_dump
   
   
      ~ViewerModel.model_dump_json
   
   
      ~ViewerModel.model_json_schema
   
   
      ~ViewerModel.model_parametrized_name
   
   
      ~ViewerModel.model_post_init
   
   
      ~ViewerModel.model_rebuild
   
   
      ~ViewerModel.model_validate
   
   
      ~ViewerModel.model_validate_json
   
   
      ~ViewerModel.model_validate_strings
   
   
      ~ViewerModel.open
   
   
      ~ViewerModel.open_sample
   
   
      ~ViewerModel.parse_file
   
   
      ~ViewerModel.parse_obj
   
   
      ~ViewerModel.parse_raw
   
   
      ~ViewerModel.reset
   
   
      ~ViewerModel.reset_view
   
   
      ~ViewerModel.schema
   
   
      ~ViewerModel.schema_json
   
   
      ~ViewerModel.update
   
   
      ~ViewerModel.update_forward_refs
   
   
      ~ViewerModel.update_status_from_cursor
   
   
      ~ViewerModel.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ViewerModel.axes
      ~ViewerModel.class_keymap
      ~ViewerModel.events
      ~ViewerModel.experimental
      ~ViewerModel.keymap
      ~ViewerModel.model_computed_fields
      ~ViewerModel.model_config
      ~ViewerModel.model_extra
      ~ViewerModel.model_fields
      ~ViewerModel.model_fields_set
      ~ViewerModel.scale_bar
      ~ViewerModel.text_overlay
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details